add all files that I need to build game, logic is finished too, remove extra files, add couple of widgets, still need to finish game

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,7 +25,16 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <div id="root"></div>
+    <div id="root">Battelship - 
+    <a href="https://en.wikipedia.org/wiki/Functional_programming" target="_blank">Functional programming</a>, 
+    <a href="https://www.haskell.org/" target="_blank">Haskell</a>, 
+    <a href="http://snapframework.com/" target="_blank">Snap Framework</a>,
+    <a href="https://reactjs.org/" target="_blank">React</a>, 
+    <a href="https://rxjs-dev.firebaseapp.com/" target="_blank">rxjs</a>, 
+    <a href="https://ramdajs.com/" target="_blank">Ramda</a>, 
+    <a href="https://www.mongodb.com/" target="_blank">MongoDB</a><br/>
+    Author: Dima Kurilo &lt;dkurilo@gmail.com&gt;<br/>
+    Github: <a href="https://github.com/DKurilo/battleship" target="_blank">https://github.com/DKurilo/battleship</a></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
