--- a/client/public/index.html
+++ b/client/public/index.html
@@ -19,13 +19,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Battleships helper</title>
+    <title>Battleship Game</title>
   </head>
   <body>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <div id="root">Battelship - 
+    <div id="root">Battelship:  
     <a href="https://en.wikipedia.org/wiki/Functional_programming" target="_blank">Functional programming</a>, 
     <a href="https://www.haskell.org/" target="_blank">Haskell</a>, 
     <a href="http://snapframework.com/" target="_blank">Snap Framework</a>,
