remove annoying text selection on buttons

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,7 +25,7 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <div id="root">Battelship:  
+    <div id="root"><a href="https://en.m.wikipedia.org/wiki/Battleship_(game)" target="_blank">Battelship</a>: 
     <a href="https://en.wikipedia.org/wiki/Functional_programming" target="_blank">Functional programming</a>, 
     <a href="https://www.haskell.org/" target="_blank">Haskell</a>, 
     <a href="http://snapframework.com/" target="_blank">Snap Framework</a>,
